--- a/Spot/Spot/Base.lproj/Main.storyboard
+++ b/Spot/Spot/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="EaM-KD-QKg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="EaM-KD-QKg">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -97,10 +97,10 @@
             </objects>
             <point key="canvasLocation" x="-679" y="442"/>
         </scene>
-        <!--View Controller-->
+        <!--Spot Login View Controller-->
         <scene sceneID="Lkp-ST-FPL">
             <objects>
-                <viewController id="EaM-KD-QKg" sceneMemberID="viewController">
+                <viewController id="EaM-KD-QKg" customClass="SpotLoginViewController" customModule="Spot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="omn-QU-kv9"/>
                         <viewControllerLayoutGuide type="bottom" id="hu3-VF-Ark"/>
@@ -116,6 +116,7 @@
                                 <rect key="frame" x="36" y="472" width="248" height="43"/>
                                 <state key="normal" image="Login Button"/>
                                 <connections>
+                                    <action selector="loginButton:" destination="EaM-KD-QKg" eventType="touchUpInside" id="MqM-HH-eLP"/>
                                     <segue destination="8iy-LV-zzp" kind="show" id="Ec1-zR-BH0"/>
                                 </connections>
                             </button>
@@ -136,7 +137,37 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Caj-1E-ktI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-713" y="-1338"/>
+            <point key="canvasLocation" x="-649" y="-1920"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="tei-tl-eLi">
+            <objects>
+                <viewController id="gxf-cF-qAt" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="k0k-gH-OAZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="jhP-Mx-Ynf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="zUZ-ql-4s7">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1DC-5u-Rz8">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="1DC-5u-Rz8" firstAttribute="leading" secondItem="zUZ-ql-4s7" secondAttribute="leading" id="Ben-jg-dt9"/>
+                            <constraint firstItem="1DC-5u-Rz8" firstAttribute="top" secondItem="zUZ-ql-4s7" secondAttribute="top" id="MIF-XL-cB0"/>
+                            <constraint firstAttribute="bottom" secondItem="1DC-5u-Rz8" secondAttribute="bottom" id="gua-zp-skp"/>
+                            <constraint firstAttribute="trailing" secondItem="1DC-5u-Rz8" secondAttribute="trailing" id="xnO-ua-xqi"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7K8-n3-CtQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-114" y="-1907"/>
         </scene>
         <!--Discover Navigation Bar-->
         <scene sceneID="q93-KC-yL3">
@@ -186,7 +217,7 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="285"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dsu-Wu-NlV" id="OMW-s0-pqP">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="284"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="284.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trending Movies" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VNg-Xz-UBw">
@@ -195,7 +226,7 @@
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="y5w-tn-Ief">
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="y5w-tn-Ief">
                                                     <rect key="frame" x="0.0" y="59" width="320" height="195"/>
                                                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="e3f-3U-zVD">
@@ -218,13 +249,13 @@
                                                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sg3-fw-jNV">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="130" height="195"/>
                                                                             </imageView>
-                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="74,029" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6RH-eg-FgR">
+                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="74,029" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6RH-eg-FgR">
                                                                                 <rect key="frame" x="67" y="130" width="63" height="9"/>
                                                                                 <fontDescription key="fontDescription" name="GothamBook" family="Gotham Book" pointSize="10"/>
                                                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                                                 <nil key="highlightedColor"/>
                                                                             </label>
-                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Runtime" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TU6-ad-8Ab">
+                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Runtime" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TU6-ad-8Ab">
                                                                                 <rect key="frame" x="67" y="140" width="55" height="7"/>
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="height" constant="7" id="tRB-50-Ogl"/>
@@ -233,7 +264,7 @@
                                                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                                                 <nil key="highlightedColor"/>
                                                                             </label>
-                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="1,713,729" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zRl-8k-tPj">
+                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1,713,729" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zRl-8k-tPj">
                                                                                 <rect key="frame" x="67" y="161" width="68" height="9"/>
                                                                                 <fontDescription key="fontDescription" name="GothamBook" family="Gotham Book" pointSize="10"/>
                                                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -245,7 +276,7 @@
                                                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                                                 <nil key="highlightedColor"/>
                                                                             </label>
-                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Votes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jkP-qU-P2Z">
+                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Votes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jkP-qU-P2Z">
                                                                                 <rect key="frame" x="67" y="171" width="55" height="7"/>
                                                                                 <fontDescription key="fontDescription" name="GothamBook" family="Gotham Book" pointSize="8"/>
                                                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -306,7 +337,7 @@
                                                 <constraint firstItem="y5w-tn-Ief" firstAttribute="leading" secondItem="OMW-s0-pqP" secondAttribute="leading" id="Ed4-dm-Gk5"/>
                                                 <constraint firstItem="y5w-tn-Ief" firstAttribute="top" secondItem="VNg-Xz-UBw" secondAttribute="bottom" constant="17" id="L2c-0T-1vH"/>
                                                 <constraint firstAttribute="trailing" secondItem="VNg-Xz-UBw" secondAttribute="trailing" id="QQr-F3-GSD"/>
-                                                <constraint firstAttribute="bottom" secondItem="y5w-tn-Ief" secondAttribute="bottom" constant="20" id="YSw-my-fqt"/>
+                                                <constraint firstAttribute="bottom" secondItem="y5w-tn-Ief" secondAttribute="bottom" constant="30.5" id="YSw-my-fqt"/>
                                                 <constraint firstItem="VNg-Xz-UBw" firstAttribute="top" secondItem="OMW-s0-pqP" secondAttribute="top" constant="20" id="hFm-oQ-B6K"/>
                                                 <constraint firstAttribute="trailing" secondItem="y5w-tn-Ief" secondAttribute="trailing" id="kwr-vJ-Bgg"/>
                                                 <constraint firstItem="VNg-Xz-UBw" firstAttribute="leading" secondItem="OMW-s0-pqP" secondAttribute="leading" constant="15" id="uBe-ZC-6fs"/>
