--- a/Spot/Spot/Base.lproj/Main.storyboard
+++ b/Spot/Spot/Base.lproj/Main.storyboard
@@ -93,10 +93,10 @@
             </objects>
             <point key="canvasLocation" x="-679" y="442"/>
         </scene>
-        <!--Spot Login View Controller-->
+        <!--SpotLoginViewController-->
         <scene sceneID="Lkp-ST-FPL">
             <objects>
-                <viewController id="EaM-KD-QKg" customClass="SpotLoginViewController" customModule="Spot" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SpotLoginViewController" title="SpotLoginViewController" id="EaM-KD-QKg" customClass="SpotLoginViewController" customModule="Spot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="omn-QU-kv9"/>
                         <viewControllerLayoutGuide type="bottom" id="hu3-VF-Ark"/>
@@ -110,7 +110,6 @@
                                 <state key="normal" image="Login Button"/>
                                 <connections>
                                     <action selector="loginButton:" destination="EaM-KD-QKg" eventType="touchUpInside" id="MqM-HH-eLP"/>
-                                    <segue destination="8iy-LV-zzp" kind="show" id="A03-py-JTm"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -168,7 +167,7 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wBv-VK-vZt" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController title="Discover Navigation Bar" id="yC9-pQ-NM4" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Discover" image="6D5B063D-5484-449B-85F4-24EE81D42671" selectedImage="Discover Icon" id="ypc-mV-Q6b"/>
+                    <tabBarItem key="tabBarItem" title="Discover" image="Discover Icon" selectedImage="Discover Icon" id="ypc-mV-Q6b"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="384" height="667"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="NoD-8o-3yf">
@@ -378,10 +377,10 @@
             </objects>
             <point key="canvasLocation" x="1943" y="-1517"/>
         </scene>
-        <!--Spot Tab Bar Controller-->
+        <!--SpotTabBarController-->
         <scene sceneID="sb4-hl-ETF">
             <objects>
-                <tabBarController id="8iy-LV-zzp" customClass="SpotTabBarController" customModule="Spot" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="SpotTabBarController" title="SpotTabBarController" id="8iy-LV-zzp" customClass="SpotTabBarController" customModule="Spot" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" id="l0W-oS-c6E">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -402,99 +401,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="6D5B063D-5484-449B-85F4-24EE81D42671" width="25" height="25">
-            <mutableData key="keyedArchiveRepresentation">
-YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
-GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
-c1dOU0NvbG9ygAKADRIgwAAAgAOAC1h7MjUsIDI1fdIVChYYWk5TLm9iamVjdHOhF4AEgArSFQoaHaIb
-HIAFgAaACRAA0iAKISJfEBROU1RJRkZSZXByZXNlbnRhdGlvboAHgAhPERJiTU0AKgAACcwAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA8PDxM9PT1MgICAnr29vezT09P/vb297ICAgJ49PT1MDw8P
-EwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGRkZ
-IXFxcY2srKzXpKSkzIODg6JhYWF4XFxccmFhYXiDg4OipKSkzKurq9dycnKMGRkZIAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBVFRUa7Kyst2FhYWlNjY2RQgICAsAAAAAAAAA
-ABcXFxwAAAAAAAAAAAgICAs2NjZFhYWFpbKyst1VVVVqAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAFBQUHenp6mKqqqtM3NzdFAAAAAAAAAAAAAAAAAAAAAAwMDA+VlZW6DAwMDwAAAAAAAAAAAAAA
-AAAAAAA3NzdFqamp03l5eZcFBQUHAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEDenp6mJ2dncYTExMaAAAA
-AAAAAAAAAAAAAAAAAAAAAAACAgIEIyMjLAICAgQAAAAAAAAAAAAAAAAAAAAAAAAAABMTExqdnZ3GeXl5
-lwEBAQMAAAAAAAAAAAAAAAAAAAAAVFRUaaqqqtMSEhIZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEhISGampqdNTU1NpAAAAAAAAAAAAAAAAGhoa
-IbKyst40NDRCAAAAAAAAAAAICAgLGhoaIgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAA0NDRCs7Oz3hoaGiEAAAAAAAAAAHNzc46GhoanAAAAAAAAAAAAAAAAGxsb
-I7CwsNyNjY2uPT09TAAAAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AI6OjrFxcXGNAAAAAA8PDxOsrKzWNTU1QwAAAAAAAAAAAAAAAAEBAQGPj4+ysLCw2qGhociWlpa4PDw8
-SwEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA1NTVCq6ur1Q4ODhI8PDxNpKSk
-zAgICAsAAAAAAAAAAAAAAAAAAAAAPT09TKKioskVFRUcVVVVaaysrNCTk5O1IyMjKwAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAACAgIC6SkpMw8PDxLgICAn4KCgqQAAAAAAAAAAAAAAAAAAAAAAAAA
-AAEBAQOWlpa7VFRUaQAAAAAODg4SbGxshrOzs95FRUVWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAACCgoKkfX19nr6+vuxfX193AgICAgsLCw4DAwMDAAAAAAAAAAAAAAAAPT09TKqqqtMMDAwQAAAA
-AA0NDRJAQEBSs7Oz3yEhISoAAAAAAAAAAAAAAAAAAAAAAwMDAwsLCw4CAgICX19fd729verU1NT/XFxc
-chgYGB2QkJC1IyMjLQAAAAAAAAAAAAAAAAICAgSRkZG3ampqhgoKCg+Ojo6zCgoKDmhoaIKVlZW6BAQE
-BAAAAAAAAAAAAAAAACMjIy2QkJC1GBgYHVxcXHLU1NT/vb29619fX3cCAgICCwsLDgMDAwMAAAAAAAAA
-AAAAAAAAAAAAISEhKrOzs99BQUFRDQ0NEQAAAAANDQ0Rqqqq1D09PUwAAAAAAAAAAAAAAAADAwMDCwsL
-DgICAgJfX193vb296oCAgJ+CgoKkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABFRUVWs7Oz
-32lpaYMODg4SAAAAAFNTU2qWlpa7AQEBAwAAAAAAAAAAAAAAAAAAAAAAAAAAgoKCpH5+fp08PDxNpKSk
-zAgICAsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACIiIiuVlZW4rKys0FZWVmoVFRUcoKCg
-yj09PUwAAAAAAAAAAAAAAAAAAAAACAgIC6SkpMw8PDxLDw8PE6ysrNY1NTVDAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAjw8PEuWlpa4oqKiybGxsduPj4+yAQEBAQAAAAAAAAAAAAAA
-ADU1NUKrq6vVDg4OEgAAAABzc3OOhoaGpwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAj09PUyOjo6usLCw3BsbGyMAAAAAAAAAAAAAAACOjo6xcHBwjQAAAAAAAAAAGhoa
-IbKyst00NDRCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-ABoaGiIICAgLAAAAAAAAAAA1NTVCsrKy3hkZGSEAAAAAAAAAAAAAAABUVFRpqamp0xISEhkAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASEhIZqamp
-01NTU2gAAAAAAAAAAAAAAAAAAAAAAQEBA3l5eZednZ3GExMTGgAAAAAAAAAAAAAAAAAAAAAAAAAAAgIC
-BCMjIywCAgIEAAAAAAAAAAAAAAAAAAAAAAAAAAATExManZ2dxnh4eJYCAgICAAAAAAAAAAAAAAAAAAAA
-AAAAAAAFBQUHeXl5l6qqqtM3NzdFAAAAAAAAAAAAAAAAAAAAAAwMDA+VlZW6DAwMDwAAAAAAAAAAAAAA
-AAAAAAA3NzdFqamp03h4eJcFBQUHAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQFVVVVqs7Oz
-3o6Ojq82NjZECAgICwAAAAAAAAAAFxcXHAAAAAAAAAAACAgICzY2NkSOjo6vsrKy3lRUVGkBAQEBAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABkZGSBycnKMrKys1qSkpMyDg4OjYWFh
-eFxcXHJhYWF4g4ODo6SkpMysrKzWcXFxjBgYGCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA8PDxM8PDxLfn5+nb29verT09P/vLy86n5+fp08PDxLDw8P
-EwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA4BAAADAAAAAQAZAAABAQADAAAAAQAZAAAB
-AgADAAAABAAACnoBAwADAAAAAQABAAABBgADAAAAAQACAAABEQAEAAAAAQAAAAgBEgADAAAAAQABAAAB
-FQADAAAAAQAEAAABFgADAAAAAQAZAAABFwAEAAAAAQAACcQBHAADAAAAAQABAAABUgADAAAAAQABAAAB
-UwADAAAABAAACoKHcwAHAAAH2AAACooAAAAAAAgACAAIAAgAAQABAAEAAQAAB9hhcHBsAiAAAG1udHJS
-R0IgWFlaIAfZAAIAGQALABoAC2Fjc3BBUFBMAAAAAGFwcGwAAAAAAAAAAAAAAAAAAAAAAAD21gABAAAA
-ANMtYXBwbAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC2Rlc2MA
-AAEIAAAAb2RzY20AAAF4AAAFnGNwcnQAAAcUAAAAOHd0cHQAAAdMAAAAFHJYWVoAAAdgAAAAFGdYWVoA
-AAd0AAAAFGJYWVoAAAeIAAAAFHJUUkMAAAecAAAADmNoYWQAAAesAAAALGJUUkMAAAecAAAADmdUUkMA
-AAecAAAADmRlc2MAAAAAAAAAFEdlbmVyaWMgUkdCIFByb2ZpbGUAAAAAAAAAAAAAABRHZW5lcmljIFJH
-QiBQcm9maWxlAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABt
-bHVjAAAAAAAAAB8AAAAMc2tTSwAAACgAAAGEZGFESwAAAC4AAAGsY2FFUwAAACQAAAHadmlWTgAAACQA
-AAH+cHRCUgAAACYAAAIidWtVQQAAACoAAAJIZnJGVQAAACgAAAJyaHVIVQAAACgAAAKaemhUVwAAABYA
-AALCbmJOTwAAACYAAALYY3NDWgAAACIAAAL+aGVJTAAAAB4AAAMgaXRJVAAAACgAAAM+cm9STwAAACQA
-AANmZGVERQAAACwAAAOKa29LUgAAABYAAAO2c3ZTRQAAACYAAALYemhDTgAAABYAAAPMamFKUAAAABoA
-AAPiZWxHUgAAACIAAAP8cHRQTwAAACYAAAQebmxOTAAAACgAAAREZXNFUwAAACYAAAQedGhUSAAAACQA
-AARsdHJUUgAAACIAAASQZmlGSQAAACgAAASyaHJIUgAAACgAAATacGxQTAAAACwAAAUCcnVSVQAAACIA
-AAUuYXJFRwAAACYAAAVQZW5VUwAAACYAAAV2AFYBYQBlAG8AYgBlAGMAbgD9ACAAUgBHAEIAIABwAHIA
-bwBmAGkAbABHAGUAbgBlAHIAZQBsACAAUgBHAEIALQBiAGUAcwBrAHIAaQB2AGUAbABzAGUAUABlAHIA
-ZgBpAGwAIABSAEcAQgAgAGcAZQBuAOgAcgBpAGMAQx6lAHUAIABoAOwAbgBoACAAUgBHAEIAIABDAGgA
-dQBuAGcAUABlAHIAZgBpAGwAIABSAEcAQgAgAEcAZQBuAOkAcgBpAGMAbwQXBDAEMwQwBDsETAQ9BDgE
-OQAgBD8EQAQ+BEQEMAQ5BDsAIABSAEcAQgBQAHIAbwBmAGkAbAAgAGcA6QBuAOkAcgBpAHEAdQBlACAA
-UgBWAEIAwQBsAHQAYQBsAOEAbgBvAHMAIABSAEcAQgAgAHAAcgBvAGYAaQBskBp1KAAgAFIARwBCACCC
-cl9pY8+P8ABHAGUAbgBlAHIAaQBzAGsAIABSAEcAQgAtAHAAcgBvAGYAaQBsAE8AYgBlAGMAbgD9ACAA
-UgBHAEIAIABwAHIAbwBmAGkAbAXkBegF1QXkBdkF3AAgAFIARwBCACAF2wXcBdwF2QBQAHIAbwBmAGkA
-bABvACAAUgBHAEIAIABnAGUAbgBlAHIAaQBjAG8AUAByAG8AZgBpAGwAIABSAEcAQgAgAGcAZQBuAGUA
-cgBpAGMAQQBsAGwAZwBlAG0AZQBpAG4AZQBzACAAUgBHAEIALQBQAHIAbwBmAGkAbMd8vBgAIABSAEcA
-QgAg1QS4XNMMx3xmbpAaACAAUgBHAEIAIGPPj/Blh072TgCCLAAgAFIARwBCACAw1zDtMNUwoTCkMOsD
-kwO1A70DuQO6A8wAIAPAA8EDvwPGA68DuwAgAFIARwBCAFAAZQByAGYAaQBsACAAUgBHAEIAIABnAGUA
-bgDpAHIAaQBjAG8AQQBsAGcAZQBtAGUAZQBuACAAUgBHAEIALQBwAHIAbwBmAGkAZQBsDkIOGw4jDkQO
-Hw4lDkwAIABSAEcAQgAgDhcOMQ5IDicORA4bAEcAZQBuAGUAbAAgAFIARwBCACAAUAByAG8AZgBpAGwA
-aQBZAGwAZQBpAG4AZQBuACAAUgBHAEIALQBwAHIAbwBmAGkAaQBsAGkARwBlAG4AZQByAGkBDQBrAGkA
-IABSAEcAQgAgAHAAcgBvAGYAaQBsAFUAbgBpAHcAZQByAHMAYQBsAG4AeQAgAHAAcgBvAGYAaQBsACAA
-UgBHAEIEHgQxBEkEOAQ5ACAEPwRABD4ERAQ4BDsETAAgAFIARwBCBkUGRAZBACAGKgY5BjEGSgZBACAA
-UgBHAEIAIAYnBkQGOQYnBkUARwBlAG4AZQByAGkAYwAgAFIARwBCACAAUAByAG8AZgBpAGwAZXRleHQA
-AAAAQ29weXJpZ2h0IDIwMDcgQXBwbGUgSW5jLiwgYWxsIHJpZ2h0cyByZXNlcnZlZC4AWFlaIAAAAAAA
-APNSAAEAAAABFs9YWVogAAAAAAAAdE0AAD3uAAAD0FhZWiAAAAAAAABadQAArHMAABc0WFlaIAAAAAAA
-ACgaAAAVnwAAuDZjdXJ2AAAAAAAAAAEBzQAAc2YzMgAAAAAAAQxCAAAF3v//8yYAAAeSAAD9kf//+6L/
-//2jAAAD3AAAwGzSJSYnKFokY2xhc3NuYW1lWCRjbGFzc2VzXxAQTlNCaXRtYXBJbWFnZVJlcKMnKSpa
-TlNJbWFnZVJlcFhOU09iamVjdNIlJiwtV05TQXJyYXmiLCrSJSYvMF5OU011dGFibGVBcnJheaMvLCrT
-MjMKNDU2V05TV2hpdGVcTlNDb2xvclNwYWNlRDAgMAAQA4AM0iUmODlXTlNDb2xvcqI4KtIlJjs8V05T
-SW1hZ2WiOypfEA9OU0tleWVkQXJjaGl2ZXLRP0BUcm9vdIABAAgAEQAaACMALQAyADcARgBMAFcAXgBl
-AHIAeQCBAIMAhQCKAIwAjgCXAJwApwCpAKsArQCyALUAtwC5ALsAvQDCANkA2wDdE0MTSBNTE1wTbxNz
-E34ThxOME5QTlxOcE6sTrxO2E74TyxPQE9IT1BPZE+ET5BPpE/ET9BQGFAkUDgAAAAAAAAIBAAAAAAAA
-AEEAAAAAAAAAAAAAAAAAABQQA
-</mutableData>
-        </image>
         <image name="Background Image" width="160" height="284"/>
         <image name="Discover Icon" width="25" height="25"/>
         <image name="Library Icon" width="25" height="25"/>
