--- a/Spot/Spot/Base.lproj/Main.storyboard
+++ b/Spot/Spot/Base.lproj/Main.storyboard
@@ -72,6 +72,24 @@
             </objects>
             <point key="canvasLocation" x="-1910" y="-28"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="SIg-1J-kbp">
+            <objects>
+                <navigationController navigationBarHidden="YES" id="zp7-IG-iNu" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="search" id="clc-Zx-weD"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="KAG-C9-cbv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="tuy-OF-VWA" kind="relationship" relationship="rootViewController" id="l56-rE-fun"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qsl-pE-d4j" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1169" y="546"/>
+        </scene>
         <!--Search View-->
         <scene sceneID="hPg-J7-uM8">
             <objects>
@@ -119,31 +137,20 @@
                             <constraint firstAttribute="trailing" secondItem="Fzk-hw-SId" secondAttribute="trailing" id="9MO-Zi-Og7"/>
                             <constraint firstItem="M67-gm-YEk" firstAttribute="leading" secondItem="Fzk-hw-SId" secondAttribute="leading" id="dwC-rX-B8L"/>
                             <constraint firstItem="Fzk-hw-SId" firstAttribute="leading" secondItem="tT8-n6-GRf" secondAttribute="leading" id="fOj-a3-dzE"/>
-                            <constraint firstItem="Fzk-hw-SId" firstAttribute="bottom" secondItem="M67-gm-YEk" secondAttribute="bottom" constant="-554" id="ias-xg-Tun"/>
-                            <constraint firstItem="M67-gm-YEk" firstAttribute="top" secondItem="Fzk-hw-SId" secondAttribute="bottom" id="wJC-cB-J9z"/>
+                            <constraint firstItem="Fzk-hw-SId" firstAttribute="bottom" secondItem="M67-gm-YEk" secondAttribute="bottom" constant="-556" id="ias-xg-Tun"/>
+                            <constraint firstItem="M67-gm-YEk" firstAttribute="top" secondItem="Fzk-hw-SId" secondAttribute="bottom" constant="2" id="wJC-cB-J9z"/>
                             <constraint firstItem="M67-gm-YEk" firstAttribute="trailing" secondItem="Fzk-hw-SId" secondAttribute="trailing" id="ww3-Lk-5jb"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="search" id="jtA-Te-VrK">
-                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="2" maxY="0.0"/>
-                    </tabBarItem>
+                    <navigationItem key="navigationItem" id="bIA-xq-xIe"/>
                     <connections>
                         <outlet property="searchBar" destination="Fzk-hw-SId" id="hy2-l0-NQa"/>
-                        <outlet property="searchDisplayController" destination="Ni6-6w-2b4" id="Qqc-5S-6cV"/>
                         <outlet property="tableView" destination="M67-gm-YEk" id="PTn-ta-Pc9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dbg-yL-HQk" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="Ni6-6w-2b4">
-                    <connections>
-                        <outlet property="delegate" destination="tuy-OF-VWA" id="XMg-a2-oxk"/>
-                        <outlet property="searchContentsController" destination="tuy-OF-VWA" id="FIM-2g-ahE"/>
-                        <outlet property="searchResultsDataSource" destination="tuy-OF-VWA" id="eYf-aU-WjD"/>
-                        <outlet property="searchResultsDelegate" destination="tuy-OF-VWA" id="wsL-W5-roK"/>
-                    </connections>
-                </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="-679.20000000000005" y="441.22938530734638"/>
+            <point key="canvasLocation" x="-311" y="546"/>
         </scene>
         <!--SpotLoginViewController-->
         <scene sceneID="Lkp-ST-FPL">
@@ -362,7 +369,6 @@
                                                                 <outlet property="ratingLabel" destination="CHs-zR-TRd" id="LgG-Oq-Hgi"/>
                                                                 <outlet property="runtimeLabel" destination="6RH-eg-FgR" id="fVu-u8-qNY"/>
                                                                 <outlet property="votesLabel" destination="zRl-8k-tPj" id="IcV-5d-Adl"/>
-                                                                <segue destination="hS2-Kw-5Y9" kind="show" id="xe7-Az-KRE"/>
                                                             </connections>
                                                         </collectionViewCell>
                                                     </cells>
@@ -411,23 +417,88 @@
             </objects>
             <point key="canvasLocation" x="1054" y="-1517"/>
         </scene>
-        <!--View Controller-->
+        <!--SpotDetailViewController-->
         <scene sceneID="GwI-XU-pLB">
             <objects>
-                <viewController id="hS2-Kw-5Y9" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SpotDetailViewController" title="SpotDetailViewController" id="hS2-Kw-5Y9" customClass="SpotDetailViewController" customModule="Spot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="tRj-8G-YgR"/>
                         <viewControllerLayoutGuide type="bottom" id="0b6-tT-eR8"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="p9P-R1-xsp">
-                        <rect key="frame" x="0.0" y="64" width="384" height="554"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MNK-jg-NJ6">
+                                <frame key="frameInset" width="384" height="610"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="irw-4I-UPm">
+                                <frame key="frameInset" minX="16" minY="20" width="155" height="233"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" text="LOLOLOL" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="krU-9l-vjN">
+                                <frame key="frameInset" minX="179" minY="20" width="180" height="233"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="GothamMedium" family="GothamMedium" pointSize="22"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Runtime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tDV-lJ-6ix">
+                                <frame key="frameInset" minX="16" minY="267" width="102" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="GothamMedium" family="GothamMedium" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Votes" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iea-SP-Xr8">
+                                <frame key="frameInset" minX="292" minY="267" width="67" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="GothamMedium" family="GothamMedium" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="12,345" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uDH-A6-IbQ">
+                                <frame key="frameInset" minX="16" minY="307" width="162" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="GothamMedium" family="GothamMedium" pointSize="22"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1,345,678" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Es-4W-igx">
+                                <frame key="frameInset" minX="255" minY="307" width="104" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="GothamMedium" family="GothamMedium" pointSize="22"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" scrollEnabled="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="peB-KC-suD">
+                                <frame key="frameInset" minX="12" minY="339" width="350" height="131"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="GothamMedium" family="GothamMedium" pointSize="12"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lnC-Ot-PqZ">
+                                <frame key="frameInset" minX="131" minY="467" width="113" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Add to Watchlist"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="backgroundImage" destination="MNK-jg-NJ6" id="fLx-OV-YBb"/>
+                        <outlet property="imageView" destination="irw-4I-UPm" id="Z3K-sz-rfy"/>
+                        <outlet property="runtimeLabel" destination="uDH-A6-IbQ" id="Mhq-nh-cJd"/>
+                        <outlet property="titleDescription" destination="peB-KC-suD" id="H69-wV-JHm"/>
+                        <outlet property="titleLabel" destination="krU-9l-vjN" id="mwb-kj-0w7"/>
+                        <outlet property="votesLabel" destination="8Es-4W-igx" id="hyd-Gp-09E"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uHm-nB-WqU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1943" y="-1517"/>
+            <point key="canvasLocation" x="1941.5999999999999" y="-1517.0914542728638"/>
         </scene>
         <!--SpotTabBarController-->
         <scene sceneID="sb4-hl-ETF">
@@ -441,10 +512,10 @@
                     </tabBar>
                     <connections>
                         <segue destination="yC9-pQ-NM4" kind="relationship" relationship="viewControllers" id="tsm-58-EOh"/>
-                        <segue destination="ZS6-Wl-jVL" kind="relationship" relationship="viewControllers" id="pBE-oz-CDO"/>
-                        <segue destination="tuy-OF-VWA" kind="relationship" relationship="viewControllers" id="cCq-V1-eKH"/>
-                        <segue destination="7zP-Jq-dY2" kind="relationship" relationship="viewControllers" id="wZJ-6T-5cD"/>
                         <segue destination="OLd-DB-Nq1" kind="relationship" relationship="viewControllers" id="3Ps-ee-ii4"/>
+                        <segue destination="zp7-IG-iNu" kind="relationship" relationship="viewControllers" id="QrO-aH-Deo"/>
+                        <segue destination="7zP-Jq-dY2" kind="relationship" relationship="viewControllers" id="wZJ-6T-5cD"/>
+                        <segue destination="ZS6-Wl-jVL" kind="relationship" relationship="viewControllers" id="pBE-oz-CDO"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Kg-x5-nZc" userLabel="First Responder" sceneMemberID="firstResponder"/>
